(custom-settings): fix the save button not showing

--- a/custom-settings/style.css
+++ b/custom-settings/style.css
@@ -19,15 +19,12 @@
 }
 
 #modal.custom-settings .modal-body {
-  padding: 0;
+  display: flex;
+  justify-content: space-between;
   border: 1px solid var(--color-popover-border);
   border-radius: var(--border-radius);
   background: var(--color-widget-background);
-}
-
-#modal.custom-settings .modal-body > div {
-  display: flex;
-  justify-content: space-between;
+  padding: 0;
   width: 100%;
 }
 
@@ -148,10 +145,14 @@
 }
 
 #modal.custom-settings button.btn {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
   padding: 5px 10px;
   background: var(--color-primary);
   color: var(--color-background);
   border-radius: var(--border-radius);
+  word-spacing: -0.15em;
 }
 
 #modal.custom-settings button.btn.btn-float {
